# namegenerator

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: names.ipynb
src/name_generator/: __init__.py  model.py
