[project]
name = "namegenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "numpy>=2.1.2",
    "polars>=1.12.0",
    "torch>=2.5.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.66.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
